# image2excel

backend/: .env  main.py  pyproject.toml
backend/app/core/: __init__.py  config.py  security.py
backend/app/dtos/: AuthDTO.py  TaskDTO.py
backend/app/image2excel/: Image2Excel.py  ImageUtils.py  Task.py  TaskExecutor.py  TaskManager.py  __init__.py  task_manager.py
backend/app/image2excel/engine/: prompt.py  request.py  request_self_correct.py
backend/app/routes/: __init__.py  auth.py  files.py  tasks.py
backend/app/services/: AuthService.py  TaskService.py
frontend/: package.json
