[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.12"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
openai = "^1.63.0"
python-jose = "^3.3.0"
python-dotenv = "^1.0.1"
pyotp = "^2.9.0"
starlette = "^0.45.3"
python-multipart = "^0.0.20"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
pillow = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
